# mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/prompts/: plan-mcpServer.prompt.md
agent/: llm.py  main.py  mcp_client.py  pyproject.toml
scripts/: generate_token.py
src/: auth.py  config.py  server.py
src/tools/: crypto.py  weather.py
